--- a/mc3-runners-community/MC3-Running/View/Group.storyboard
+++ b/mc3-runners-community/MC3-Running/View/Group.storyboard
@@ -238,7 +238,7 @@ if you want to go far go together</string>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gun Eight" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jfr-wl-KnB">
-                                <rect key="frame" x="32" y="288" width="311" height="40"/>
+                                <rect key="frame" x="32" y="244" width="311" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="tMB-2O-UOH"/>
                                     <constraint firstAttribute="width" constant="311" id="tfZ-fy-qdg"/>
@@ -248,7 +248,7 @@ if you want to go far go together</string>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bogor Runner" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CTR-ip-kJM">
-                                <rect key="frame" x="33" y="342" width="311" height="40"/>
+                                <rect key="frame" x="33" y="298" width="311" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="XkN-zk-Gf1"/>
                                     <constraint firstAttribute="width" constant="311" id="sJ3-zl-7If"/>
@@ -258,7 +258,7 @@ if you want to go far go together</string>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Group id:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jOb-SP-GWr">
-                                <rect key="frame" x="143.33333333333334" y="406" width="88.666666666666657" height="26"/>
+                                <rect key="frame" x="143.33333333333334" y="362" width="88.666666666666657" height="26"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="26" id="k5O-go-J9r"/>
                                 </constraints>
@@ -267,13 +267,13 @@ if you want to go far go together</string>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="appName" translatesAutoresizingMaskIntoConstraints="NO" id="ZKg-H8-MXZ">
-                                <rect key="frame" x="112.66666666666669" y="187" width="150" height="46"/>
+                                <rect key="frame" x="112.66666666666669" y="143" width="150" height="46"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="o8W-I9-Ipf"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="35" translatesAutoresizingMaskIntoConstraints="NO" id="8NI-uM-FrI">
-                                <rect key="frame" x="26" y="455" width="325" height="45"/>
+                                <rect key="frame" x="26" y="411" width="325" height="45"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AnE-NH-9qh">
                                         <rect key="frame" x="0.0" y="0.0" width="55" height="45"/>
@@ -309,7 +309,7 @@ if you want to go far go together</string>
                                 </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BAl-aT-MEd">
-                                <rect key="frame" x="17" y="566" width="341" height="44"/>
+                                <rect key="frame" x="17" y="615" width="341" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="88K-I7-TmU"/>
                                 </constraints>
@@ -320,7 +320,7 @@ if you want to go far go together</string>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bef-HI-ZkP">
-                                <rect key="frame" x="37" y="622" width="301" height="44"/>
+                                <rect key="frame" x="37" y="671" width="301" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="n6g-TB-cf9"/>
                                 </constraints>
@@ -379,7 +379,7 @@ if you want to go far go together</string>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BFH-rg-HKN">
-                                <rect key="frame" x="0.0" y="88" width="375" height="641"/>
+                                <rect key="frame" x="0.0" y="44" width="375" height="734"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="57" id="ioS-Rc-fnP" customClass="DetailTableViewCell" customModule="MC3_Running" customModuleProvider="target">
@@ -563,7 +563,7 @@ if you want to go far go together</string>
     </scenes>
     <resources>
         <image name="Createbutton" width="343" height="44"/>
-        <image name="Icon-1024" width="768" height="768"/>
+        <image name="Icon-1024" width="1024" height="1024"/>
         <image name="Join" width="343" height="44"/>
         <image name="appName" width="108" height="46"/>
         <image name="cancel_button-1" width="56" height="56"/>
@@ -573,7 +573,7 @@ if you want to go far go together</string>
         <image name="leaveGroup_button" width="300" height="44"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="o7O-DR-ech"/>
-        <segue reference="Zag-6Y-I04"/>
+        <segue reference="nZw-Nq-6Xc"/>
+        <segue reference="t73-N9-Rff"/>
     </inferredMetricsTieBreakers>
 </document>
