send Location to Next segue finish

--- a/mc3-runners-community/MC3-Running/View/Base.lproj/Run.storyboard
+++ b/mc3-runners-community/MC3-Running/View/Base.lproj/Run.storyboard
@@ -34,7 +34,7 @@
                                     <color key="titleColor" red="1" green="0.99997597930000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
                                 <connections>
-                                    <segue destination="PMb-9l-JIp" kind="show" id="ZR7-FB-0et"/>
+                                    <segue destination="PMb-9l-JIp" kind="show" identifier="addRoute" id="ZR7-FB-0et"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="03:10:34" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZAa-Ze-AhR">
@@ -150,7 +150,7 @@
         <!--Add Route View Controller-->
         <scene sceneID="C8q-6C-PM3">
             <objects>
-                <viewController storyboardIdentifier="addRoute" id="PMb-9l-JIp" customClass="AddRouteViewController" customModule="MC3_Running" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="PMb-9l-JIp" customClass="AddRouteViewController" customModule="MC3_Running" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="DIW-eJ-ilg">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
